src/antish/example/fail/rec-good.ha
main = {
    f 1;
}


rec f x = {
    Move;
    f x;
}
